<resources>
    <string name="app_name">assigment_5</string>

    <string name="text_clubs">FOOTBALL NEWS \n
The focus of Mbappé would be changed by computer \n
VOLLEY NEWS \n
The volley ball would be made with sweaty vegan sheep\'s stomach \n
BIKE NEWS \n
Christopher vroom reportedly used charcoal to increase the density of his buttocks \n</string>
    <string name="text_event">Football match on the 11/10\nVolley Tournament on the 21/10\nHockey discount until the 10/09</string>

    <string name="courses">courses</string>
    <string name="trainers">trainers</string>
    <string name="dashboard">dasboard</string>
    <string name="travelplan">plan</string>

    <string name="password">password</string>
    <string name="email">email</string>
    <string name="agreecreate">Agree &amp; Create Account</string>
    <string name="acceptcgu">By clicking the button below, I agree to be found by Pictalio\'s User Agreement and Privacy Policy</string>
    <string name="forgot">Forgot your password ?</string>
    <string name="signup">Is That your first time here ? Sign up</string>

    <!-- Facebook -->
    <string name="facebook_app_id">748676502159819</string>
    <string name="fb_login_protocol_scheme">fb748676502159819</string>


</resources>
