<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#E7EDEC"
    tools:context=".SignUpActivity"
    android:layout_height="match_parent">

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/confirmpassword"
        android:hint="@string/password"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <CheckBox
        android:id="@+id/agreement"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/acceptcgu"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:text="@string/agreecreate"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </RelativeLayout>

</LinearLayout>