<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#E7EDEC"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <TextView
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please Sign In"
        android:textColor="@color/colorPrimary"
        />

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/forgot"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:textColor="@color/colorPrimary"
        />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/signup"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/colorPrimary"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:text="Sign In"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


    </RelativeLayout>




</LinearLayout>